  * Support reading configuration variables from devscripts configuration
    files. (LP: #681693)
    - Added ubuntu-dev-tools.5
  * Support the combined "Name <email>" format in UBUMAIL, DEBFULLNAME, and
    DEBEMAIL. (LP: #665202)
  * Add the beginnings of a test suite. (LP: #690386)
    - Switch to setuptools, to support setup.py test.

 -- Stefano Rivera <stefanor@ubuntu.com>  Mon, 20 Dec 2010 10:58:53 +0200

ubuntu-dev-tools (0.108) experimental; urgency=low

  [ Stefano Rivera ]
  * lp-shell, import-bug-from-debian:
    Use the 'production' LP instance instead of 'edge' (which is going away).
  * pbuilder-dist:
    - Fix typo in local archive support, introduced in 0.107.
    - Warn user if they run sudo pbuilder-dist (LP: #691999).
  * Drop unnecessary debian/pycompat

  [ Benjamin Drung ]
  * pull-lp-source: Unquote URI to get "+" instead of "%2B" in the file name
    (LP: #681114).
  * sponsor-patch: Allow updating the build environment if the build failed.
  * ubuntu-iso: Exit nonzero rather than crash if a wrong parameter is passed
    (LP: #637020).

  [ Colin Watson ]
  * grep-merges: New tool.
  * ubuntu-iso(1): Fix typo.

  [ Evan Broder ]
  * backportpackage: new script for testing backport requests in a PPA.
  * sponsor-patch: Add --update option to make sure build environment is
    up to date (LP: #689605)

  [ Bilal Akhtar ]
  * pbuilder-dist: Override the default build result location if
    --buildresult is specified.
  * sponsor-patch: Support building with pbuilder-dist.

 -- Benjamin Drung <bdrung@ubuntu.com>  Sun, 19 Dec 2010 00:57:38 +0100

ubuntu-dev-tools (0.107) experimental; urgency=low

  [ Stefano Rivera ]
  * edit-patch: Detect quilt patch-system in 3.0 (quilt) packages without any
    patches yet.
  * wrap-and-sort:
    - Correct typo in options --wrap-allways -> --wrap-always
    - Sort debian/install as well as debian/*.install
    - Add one-space-indentation option: --short-indent